tests/paczka1/fuzzy1/73770621.err
Error in line 5: 0VgKqpGDxJ S146 16,8
Error in line 7: ECAMCwhQMnt S146 89,8
Error in line 29: shrSW A689 65,3
Error in line 26: a7hD1 S146 15,9
Error in line 11: mxI02N S43 99,9
Error in line 24: A689 S940 32,2
Error in line 10: 0VgKqpGDxJ S136 65,5
Error in line 34: mxI02N S940 41,3
